# OpenGLUtils

./: CMakeLists.txt  sourcelist.cmake
include/: resourceManager.hpp  shader.hpp
src/: resourceManager.cpp  shader.cpp
